http://www.mbdyn.org

Copyright (C) 1996-2013

Pierangelo Masarati     <masarati@aero.polimi.it>
Paolo Mantegazza        <mantegazza@aero.polimi.it>


MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added Umfpack solver iterative refinement support
		  (Reinhard Resch)
		- added built in drive callers interface to module-octave
		  (Reinhard Resch)
	Backward compatibility issues:
		- old binary modal joint databases no longer supported
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix binary modal joint database in MinGW
		- fix undefined const error message bug
		- fix libtool lang tag for run-time loadable modules
		  (noted by Jens van Schelve)
		- fix electric elements parsing (noted by Morten Ketelsen)
		- fix parsing on win32: MinGW/MSYS (Reinhard Resch)

MBDyn 1.5.4
	Enhancements:
		- added '-N' command-line switch to set threads number
		- added module-nonsmooth-node: non-smooth dynamics support
		  using SICONOS <http://siconos.gforge.inria.fr/>
		  (Matteo Fancello)
		- added 3D variant of continuous contact constitutive law
		  (Matteo Fancello)
		- added line search nonlinear solver (Reinhard Resch)
		- added condition number output (Reinhard Resch)
		- added scalar support genel private data (Reinhard Resch)
	Backward compatibility issues:
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- simplify escaping of delimiter in input
		- fix deformable hinge early Jacobian assembly
		  (noted by Filippo Tunesi)
		- fix conjugate transpose of `X' in pod.m
		- fix modal element when origin redefined
		  (noted by Sebastiano Fichera)
		- fix block 11 one row too much in output of femgen