@@ -594,7 +594,7 @@ ParSuperLUSparseCCSolutionManager<CC>::MatrReset(void)
 	pLS->Reset();
 }
 
-/* Risolve il sistema  Fattorizzazione + Bacward Substitution*/
+/* Risolve il sistema  Fattorizzazione + Backward Substitution */
 template <class CC>
 void
 ParSuperLUSparseCCSolutionManager<CC>::MakeCompressedColumnForm(void)
