@@ -72,7 +72,7 @@
 #include "ccmh.h"
 #include "dirccmh.h"
 #include "umfpackwrap.h"
-
+#include "dgeequ.h"
 #include <cstring>
 
 /* in some cases, int and int32_t differ */
@@ -357,12 +357,14 @@ UmfpackSparseSolutionManager::UmfpackSparseSolutionManager(integer Dim,
 		doublereal dDropTolerance,
 		const unsigned blockSize,
 		UmfpackSolver::Scale scale,
-		integer iMaxIter)
+		integer iMaxIter,
+		ScaleWhen ms)
 : A(Dim),
 x(Dim),
 b(Dim),
 xVH(Dim, &x[0]),
-bVH(Dim, &b[0])
+bVH(Dim, &b[0]),
+ms(ms)
 {
 	SAFENEWWITHCONSTRUCTOR(pLS, UmfpackSolver,
 			UmfpackSolver(Dim, dPivot, dDropTolerance, blockSize, scale, iMaxIter));
@@ -370,6 +372,11 @@ bVH(Dim, &b[0])
 	(void)pLS->pdSetResVec(&b[0]);
 	(void)pLS->pdSetSolVec(&x[0]);
 	pLS->SetSolutionManager(this);
+
+	if (scale != UmfpackSolver::SCALE_NONE && ms != NEVER) {
+		ASSERT(0); // avoid double scaling
+		throw ErrGeneric(MBDYN_EXCEPT_ARGS);
+	}
 }
 
 UmfpackSparseSolutionManager::~UmfpackSparseSolutionManager(void) 
@@ -386,23 +393,124 @@ UmfpackSparseSolutionManager::MatrReset(void)
 void
 UmfpackSparseSolutionManager::MakeCompressedColumnForm(void)
 {
+	ScaleMatrixAndRightHandSide<SpMapMatrixHandler>(A);
+
 	pLS->MakeCompactForm(A, Ax, Ai, Adummy, Ap);
 }
 
-/* Risolve il sistema Fattorizzazione + Bacward Substitution */
+template <class MH>
+void UmfpackSparseSolutionManager::ScaleMatrixAndRightHandSide(MH &mh)
+{
+#if defined(DEBUG)
+	static bool bPrintMat = true;
+#endif
+
+	if (ms != SolutionManager::NEVER) {
+		if (pLS->bReset()) {
+			// FIXME: if matrix is CC or Dir and the matrix was regenerated,
+			// the scaling needs to be recomputed
+			if (msr.empty() || ms == SolutionManager::ALWAYS) {
+#if defined(DEBUG)
+				if (bPrintMat) {
+					silent_cout("% matrix before scaling:\n");
+					silent_cout("Apre=[");
+					for (typename MH::const_iterator i = mh.begin(); i != mh.end(); ++i) {
+						if (i->dCoef != 0.) {
+							silent_cout(i->iRow + 1 << ", " << i->iCol + 1 << ", " << i->dCoef << ";\n");
+						}
+					}
+					silent_cout("];\n");
+				}
+#endif
+				// (re)compute
+				doublereal rowcnd = -1., colcnd = -1., amax = -1.;
+				dgeequ<MH>(mh, msr, msc, rowcnd, colcnd, amax);
+
+#if defined(DEBUG)
+				if (amax < std::numeric_limits<doublereal>::epsilon()
+					|| amax > 1./std::numeric_limits<doublereal>::epsilon())
+				{
+					silent_cerr("Warning: The matrix should be scaled\n");
+				}
+
+				if (colcnd >= 0.1) {
+					silent_cerr("Warning: it is not worth scaling by C\n");
+				}
+
+				if (rowcnd >= 0.1
+					&& amax >= std::numeric_limits<doublereal>::epsilon()
+					&& amax <= 1./std::numeric_limits<doublereal>::epsilon())
+				{
+					silent_cerr("Warning: it is not worth scaling by R\n");
+				}
+
+				if (bPrintMat) {
+					silent_cout("% scale factors:\n");
+					silent_cout("msr=[");
+					for (std::vector<doublereal>::const_iterator i = msr.begin(); i < msr.end(); ++i) {
+						silent_cout(*i << ";\n");
+					}
+
+					silent_cout("];\n");
+					silent_cout("msc=[");
+					for (std::vector<doublereal>::const_iterator i = msc.begin(); i < msc.end(); ++i) {
+						silent_cout(*i << ";\n");
+					}
+					silent_cout("];\n");
+				}
+#endif
+			}
+
+			// in any case scale matrix and right-hand-side
+			dgeequ_scale<MH>(mh, msr, msc);
+
+#if defined(DEBUG)
+			if (bPrintMat) {
+				silent_cout("% matrix after scaling:\n");
+				silent_cout("Apost=[");
+				for (typename MH::const_iterator i = mh.begin(); i != mh.end(); ++i) {
+					if (i->dCoef != 0.) {
+						silent_cout(i->iRow + 1 << ", " << i->iCol + 1 << ", " << i->dCoef << ";\n");
+					}
+				}
+				silent_cout("];\n");
+			}
+
+			bPrintMat = false;
+#endif
+		}
+		dgeequ_scale(bVH, &msr[0]);
+	}
+}
+
+void UmfpackSparseSolutionManager::ScaleSolution(void)
+{
+	if (ms != SolutionManager::NEVER) {
+		// scale solution
+		dgeequ_scale(xVH, &msc[0]);
+	}
+}
+
+/* Risolve il sistema Fattorizzazione + Backward Substitution */
 void
 UmfpackSparseSolutionManager::Solve(void)
 {
 	MakeCompressedColumnForm();
+
 	pLS->Solve();
+
+	ScaleSolution();
 }
 
-/* Risolve il sistema (trasposto) Fattorizzazione + Bacward Substitution */
+/* Risolve il sistema (trasposto) Fattorizzazione + Backward Substitution */
 void
 UmfpackSparseSolutionManager::SolveT(void)
 {
 	MakeCompressedColumnForm();
+
 	pLS->SolveT();
+
+	ScaleSolution();
 }
 
 /* Rende disponibile l'handler per la matrice */
@@ -433,8 +541,10 @@ UmfpackSparseCCSolutionManager<CC>::UmfpackSparseCCSolutionManager(integer Dim,
 		doublereal dPivot,
 		doublereal dDropTolerance,
 		const unsigned& blockSize,
-		UmfpackSolver::Scale scale)
-: UmfpackSparseSolutionManager(Dim, dPivot, dDropTolerance, blockSize, scale),
+		UmfpackSolver::Scale scale,
+		integer iMaxIter,
+		ScaleWhen ms)
+: UmfpackSparseSolutionManager(Dim, dPivot, dDropTolerance, blockSize, scale, iMaxIter, ms),
 CCReady(false),
 Ac(0)
 {
@@ -469,6 +579,8 @@ UmfpackSparseCCSolutionManager<CC>::MakeCompressedColumnForm(void)
 
 		CCReady = true;
 	}
+
+	ScaleMatrixAndRightHandSide<CC>(*dynamic_cast<CC *>(Ac));
 }
 
 /* Inizializzatore "speciale" */
