@@ -309,7 +309,7 @@ WsmpSparseSolutionManager::MakeCompressedColumnForm(void)
 	pLS->MakeCompactForm(A, Ax, Ai, Adummy, Ap);
 }
 
-/* Risolve il sistema  Fattorizzazione + Bacward Substitution*/
+/* Risolve il sistema  Fattorizzazione + Backward Substitution */
 void
 WsmpSparseSolutionManager::Solve(void)
 {
