@@ -690,7 +690,7 @@ Y12SparseCCSolutionManager<CC>::MatrReset(void)
 	pLS->Reset();
 }
 
-/* Risolve il sistema  Fattorizzazione + Bacward Substitution*/
+/* Risolve il sistema  Fattorizzazione + Backward Substitution */
 template <class CC>
 void
 Y12SparseCCSolutionManager<CC>::MakeIndexForm(void)
