@@ -16,6 +16,8 @@ MBDyn 1.X-Devel
 		  (Reinhard Resch)
 		- added built in drive callers interface to module-octave
 		  (Reinhard Resch)
+		- added scaling support to Umfpack and KLU
+		  (based on patch by Reinhard Resch)
 	Backward compatibility issues:
 		- old binary modal joint databases no longer supported
 	Known issues:
